Fix aligning of the card

--- a/style.css
+++ b/style.css
@@ -23,23 +23,20 @@ body {
 	font-size: 1.6rem;
 	font-weight: 500;
 	color: hsl(30, 1%, 42%);
-	background-color: hsl(30, 54%, 90%);
-	display: grid;
-	place-items: center;
 }
 
 .container {
 	width: 100%;
-	height: 80%;
+	height: 70%;
 	display: grid;
 	place-items: center;
-	padding-bottom: 12rem;
+	background-color: hsl(30, 54%, 90%);
 }
 
 .card {
 	width: 55%;
 	border-radius: 2rem;
-	margin-bottom: 30rem;
+	margin: 15rem auto;
 	padding: 4rem;
 	font-size: 1.6rem;
 }
@@ -170,7 +167,7 @@ tr:last-child > td {
 
 footer.attribution {
 	width: 100%;
-	height: 5rem;
+	height: 15rem;
 	background-color: #fff;
 	display: flex;
 	align-items: flex-end;
